# aria2_rust

./: .gitignore  Cargo.toml  README.md  README_CN.md  pex_tests.txt
aria2/: Cargo.toml
aria2-core/: Cargo.toml
aria2-core/benches/: config_bench.rs  engine_bench.rs  filesystem_bench.rs  p2_bench.rs
aria2-core/src/: colorized_stream.rs  error.rs  integration_tests_j2_j5.rs  lib.rs  log.rs  rate_limiter.rs  retry.rs  ui.rs
aria2-core/src/auth/: basic_auth.rs  credential_store.rs  digest_auth.rs  mod.rs
aria2-core/src/checksum/: checksum.rs  chunk_checksum.rs  message_digest.rs  mod.rs
aria2-core/src/config/: mod.rs  netrc.rs  option.rs  option_definitions.rs  option_types.rs  option_validator.rs  parser.rs  uri_list.rs
aria2-core/src/dns/: dns_cache.rs  mod.rs
aria2-core/src/engine/: active_output_registry.rs  batched_disk_writer.rs  bt_choke_manager.rs  bt_connection_pool.rs  bt_download_command.rs  bt_download_command_tests.rs  bt_download_execute.rs  bt_download_seeding.rs  bt_integration_tests.rs  bt_message_handler.rs  bt_mse_handshake.rs  bt_mse_handshake_tests.rs  bt_peer_connection.rs  bt_peer_interaction.rs  bt_piece_downloader.rs  bt_piece_selector.rs  bt_post_download_handler.rs  bt_progress_info_file.rs  bt_progress_info_file_tests.rs  bt_seed_manager.rs  bt_tracker_comm.rs  bt_upload_session.rs  bt_web_seed.rs  choking_algorithm.rs  command.rs  concurrent_download_command.rs  concurrent_segment_manager.rs  download_command.rs  download_engine.rs  ftp_download_command.rs  http_segment_downloader.rs  http_tracker_client.rs  lpd_manager.rs  lpd_manager_tests.rs  magnet_download_command.rs  metadata_exchange.rs  metalink_download_command.rs  mod.rs  multi_file_layout.rs  peer_stats.rs  (+6 more)
aria2-core/src/filesystem/: checksum.rs  control_file.rs  disk_adaptor.rs  disk_cache.rs  disk_space.rs  disk_writer.rs  file_allocation.rs  file_lock.rs  mod.rs  resume_helper.rs
aria2-core/src/ftp/: connection.rs  connection_tests.rs  mod.rs
aria2-core/src/http/: conditional_get.rs  connection.rs  connection_tests.rs  cookie.rs  cookie_storage.rs  digest_auth.rs  mod.rs  ns_cookie_parser.rs  request_response.rs  socks_connector.rs  stream_filter.rs  stream_filter_tests.rs
aria2-core/src/option/: mod.rs  option_handler.rs
aria2-core/src/request/: mod.rs  request_group.rs  request_group_man.rs
aria2-core/src/segment/: bitfield.rs  mod.rs  pieced_segment.rs  segment.rs
aria2-core/src/selector/: adaptive_uri_selector.rs  mod.rs  param_expander.rs  server_stat.rs  server_stat_man.rs  uri_selector.rs
aria2-core/src/session/: active_session.rs  auto_save_session.rs  mod.rs  save_session_command.rs  session_codec.rs  session_entry.rs  session_options.rs  session_persistence.rs  session_serialize_impl.rs  session_serializer.rs  session_uri_utils.rs
aria2-core/src/util/: mod.rs  speed_smooth.rs
aria2-core/src/validation/: filename.rs  mod.rs  option.rs  protocol_detector.rs  uri.rs
aria2-core/tests/: deep_e2e_bittorrent.rs  deep_e2e_cross_protocol.rs  deep_e2e_http.rs  dht_integration_tests.rs  e2e_auth_integration.rs  e2e_post_download_hooks.rs  e2e_stream_filter_integration.rs  engine_integration_tests.rs  ftp_integration_test.rs  integration_config.rs  test_concurrency.rs  test_disk_space.rs  test_e2e_bittorrent_download.rs  test_e2e_bt_seeding.rs  test_e2e_checksum.rs  test_e2e_concurrent_download.rs  test_e2e_disk_io.rs  test_e2e_download.rs  test_e2e_ftp_download.rs  test_e2e_http_concurrent.rs  test_e2e_magnet_download.rs  test_e2e_metalink_download.rs  test_e2e_rate_limit.rs  test_e2e_session.rs  test_harness.rs  test_large_file.rs  test_option_validator.rs  test_perf_baseline.rs  test_perf_ftp_baseline.rs  test_protocol_detection.rs  test_retry.rs  test_sftp_unit.rs  test_validation.rs
aria2-core/tests/e2e_helpers/: mock_http_server.rs  mock_torrent.rs  mod.rs
aria2-core/tests/fixtures/: mock_bt_peer.rs  mock_bt_seeder.rs  mock_dht_node.rs  mock_dht_server.rs  mock_ftp_server.rs  mock_tracker.rs  test_metalink_builder.rs  test_server.rs  test_torrent_builder.rs
aria2-protocol/: Cargo.toml
aria2-protocol/benches/: protocol_bench.rs
aria2-protocol/src/: lib.rs
aria2-protocol/src/bittorrent/: magnet.rs  mod.rs
aria2-protocol/src/bittorrent/bencode/: codec.rs
aria2-protocol/src/bittorrent/dht/: bootstrap.rs  bucket.rs  client.rs  engine.rs  message.rs  mod.rs  node.rs  persistence.rs  routing_table.rs  socket.rs  token_tracker.rs  transaction.rs
aria2-protocol/src/bittorrent/extension/: mod.rs  mse.rs  mse_crypto.rs  mse_dh.rs  mse_handshake.rs  pex.rs  ut_metadata.rs
aria2-protocol/src/bittorrent/message/: factory.rs  handshake.rs  mod.rs  serializer.rs  types.rs
aria2-protocol/src/bittorrent/peer/: connection.rs  encrypted_connection.rs  id.rs  mod.rs  state.rs
aria2-protocol/src/bittorrent/piece/: manager.rs  mod.rs  peer_tracker.rs  picker.rs
aria2-protocol/src/bittorrent/torrent/: info_hash.rs  mod.rs  parser.rs
aria2-protocol/src/bittorrent/tracker/: client.rs  mod.rs  public_list.rs  response.rs  udp_tracker_protocol.rs
aria2-protocol/src/ftp/: connection.rs  download.rs  listing.rs  mod.rs
aria2-protocol/src/http/: auth.rs  client.rs  cookie.rs  encoding.rs  header.rs  mod.rs  proxy.rs  request.rs  response.rs
aria2-protocol/src/metalink/: checksum_verifier.rs  mod.rs  parser.rs
aria2-protocol/src/sftp/: connection.rs  file_ops.rs  mod.rs  packet.rs  session.rs  transfer.rs
aria2-rpc/: Cargo.toml
aria2-rpc/benches/: rpc_bench.rs
aria2-rpc/src/: engine.rs  json_rpc.rs  lib.rs  rpc_handlers.rs  rpc_helpers.rs  rpc_session_helpers.rs  server.rs  websocket.rs  xml_rpc.rs
aria2-rpc/tests/: integration_rpc.rs
aria2/examples/: custom_config.rs  rpc_client.rs  simple_download.rs
aria2/src/: app.rs  cli_options.rs  download_coordinator.rs  lib.rs  main.rs  progress_display.rs
aria2/src/ui/: mod.rs  progress_bar.rs
bindings/python/: README.md  pyproject.toml
bindings/python/aria2_rust_client/: __init__.py  client.py  errors.py  events.py  transport.py  types.py
bindings/python/tests/e2e/: conftest.py  (+5 more)
(+43 files in other folders)
