[workspace]
resolver = "2"
members = [
    "aria2",
    "aria2-core",
    "aria2-protocol",
    "aria2-rpc",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["aria2-rust contributors"]
license = "GPL-2.0-or-later"
repository = "https://github.com/balovess/aria2_rust"
readme = "README.md"
keywords = ["download", "bittorrent", "http", "ftp", "rpc", "aria2", "cli"]
categories = ["command-line-utilities", "network-programming"]

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1.5"
async-trait = "0.1"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
aria2-protocol = { path = "aria2-protocol" }
aria2-core = { path = "aria2-core" }

[workspace.dev-dependencies]

[workspace.metadata.release]
allow-branch = ["main"]
