[package]
name = "aria2-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for aria2-rust: download engine, config system, request management, filesystem I/O, and console UI"

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender = "0.2"
bytes.workspace = true
async-trait.workspace = true
colored = "2.0"
atty = "0.2"
crossterm = "0.27"
md5 = "0.7"
sha1 = "0.10"
sha2 = "0.10"
adler32 = "1.2"
digest = "0.10"
aria2-protocol = { workspace = true, features = ["bittorrent"] }
reqwest = { version = "0.11", features = ["stream", "rustls-tls"], default-features = false }
ssh2 = "0.9"
rand = "0.8"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
criterion.workspace = true
base64 = "0.21"

[[bench]]
name = "config_bench"
harness = false

[[bench]]
name = "engine_bench"
harness = false

[[bench]]
name = "filesystem_bench"
harness = false
