[package]
name = "aria2-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance download engine core library with multi-protocol support (HTTP/HTTPS, FTP/SFTP, BitTorrent, Metalink)"
documentation = "https://docs.rs/aria2-core"
homepage = "https://github.com/balovess/aria2-rust"
readme = "../README.md"
keywords = ["download", "http", "ftp", "bittorrent", "aria2"]
categories = ["network-programming", "web-programming"]
include = ["src/**/*", "../README.md", "../LICENSE"]

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender = "0.2"
bytes.workspace = true
async-trait.workspace = true
colored = "2.0"
atty = "0.2"
crossterm = "0.27"
md5 = "0.7"
sha1 = "0.10"
sha2 = "0.10"
adler32 = "1.2"
digest = "0.10"
aria2-protocol = { workspace = true, features = ["bittorrent", "metalink"] }
reqwest = { version = "0.11", features = ["stream", "rustls-tls"], default-features = false }
ssh2 = "0.9"
rand = "0.8"
regex = "1"
url = "2.5"
base64 = "0.21"
flate2 = "1.0"
bzip2 = "0.4"
zeroize = "1.8"
hex = "0.4"
ring = "0.17"
rc4 = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
criterion.workspace = true
base64 = "0.21"
hyper = { version = "0.14", features = ["server", "http1"] }

[[bench]]
name = "config_bench"
harness = false

[[bench]]
name = "engine_bench"
harness = false

[[bench]]
name = "filesystem_bench"
harness = false

[[bench]]
name = "p2_bench"
harness = false
