[package]
name = "aria2-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Protocol implementations for aria2-rust (HTTP/HTTPS, FTP/SFTP, BitTorrent, Metalink)"
documentation = "https://docs.rs/aria2-protocol"
homepage = "https://github.com/balovess/aria2-rust"
readme = "../README.md"
keywords = ["http", "ftp", "bittorrent", "metalink", "protocol"]
categories = ["network-programming", "web-programming"]
include = ["src/**/*", "../README.md", "../LICENSE"]

[dependencies]
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
bytes.workspace = true
async-trait.workspace = true

reqwest = { version = "0.11", features = ["rustls-tls", "gzip", "brotli", "socks"] }
hyper = { version = "0.14", features = ["full", "stream"] }
rustls = "0.21"
rustls-pemfile = "1.0"
quick-xml = "0.31"

flate2 = "1.0"
base64 = "0.21"
base32 = "0.5"
url = "2.5"
md5 = "0.7"
sha1 = "0.10"
hex = "0.4"
rand = "0.8"
num-bigint-dig = "0.8"
num-traits = "0.2"
getrandom = "0.2"
ssh2 = "0.9"
bitflags = "2.4"

[features]
default = []
http = []
bittorrent = []
metalink = []
sftp = []

[dev-dependencies]
tempfile = "3.8"
mockito = "1.4"
criterion.workspace = true

[[bench]]
name = "protocol_bench"
harness = false
