[package]
name = "aria2-rpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "RPC library for aria2-rust: JSON-RPC 2.0, XML-RPC, WebSocket events, HTTP server framework, and RpcEngine bridge"

[dependencies]
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
bytes.workspace = true
async-trait.workspace = true

axum = "0.7"
tungstenite = "0.20"
base64 = "0.21"
quick-xml = "0.31"
rand = "0.8"

[dev-dependencies]
tempfile = "3.8"
criterion.workspace = true

[[bench]]
name = "rpc_bench"
harness = false
